test_suite5/ALAN/test_suite/alan-2022-examples/failing/009020_mutation.alan
source Y function i7(boolean integer) begin relax end begin relax end
